[gd_scene load_steps=4 format=2]

[ext_resource path="res://assets/gear/ui/menu.png" type="Texture" id=1]
[ext_resource path="res://assets/gear/ui/button.tres" type="Theme" id=2]
[ext_resource path="res://entities/game_interface/game_interface.gd" type="Script" id=3]

[node name="game_interface" type="CanvasLayer"]
script = ExtResource( 3 )

[node name="main" type="Control" parent="."]
margin_right = 1024.0
margin_bottom = 600.0

[node name="menu_button" type="TextureButton" parent="main"]
margin_left = 927.0
margin_top = 13.0
margin_right = 945.0
margin_bottom = 31.0
rect_scale = Vector2( 4, 4 )
texture_normal = ExtResource( 1 )

[node name="menu" type="Control" parent="."]
margin_right = 1024.0
margin_bottom = 600.0

[node name="dim" type="ColorRect" parent="menu"]
margin_right = 1024.0
margin_bottom = 600.0
color = Color( 0, 0, 0, 0.607843 )

[node name="continue_button" type="Button" parent="menu"]
margin_left = 316.0
margin_top = 150.0
margin_right = 400.0
margin_bottom = 170.0
rect_scale = Vector2( 4, 4 )
theme = ExtResource( 2 )
text = "Continue"

[node name="main_menu_button" type="Button" parent="menu"]
margin_left = 316.0
margin_top = 260.0
margin_right = 400.0
margin_bottom = 280.0
rect_scale = Vector2( 4, 4 )
theme = ExtResource( 2 )
text = "Main Menu"

[node name="exit_game_button" type="Button" parent="menu"]
margin_left = 316.0
margin_top = 370.0
margin_right = 400.0
margin_bottom = 390.0
rect_scale = Vector2( 4, 4 )
theme = ExtResource( 2 )
text = "Exit Game"

[connection signal="pressed" from="main/menu_button" to="." method="_on_menu_pressed"]
[connection signal="pressed" from="menu/continue_button" to="." method="_on_continue_button_pressed"]
[connection signal="pressed" from="menu/main_menu_button" to="." method="_on_main_menu_button_pressed"]
[connection signal="pressed" from="menu/exit_game_button" to="." method="_on_exit_game_button_pressed"]
